# traffic

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  Dockerfile  citation.cff  docker-compose-spark.yml  mypy.ini  pyproject.toml  readme.md  setup.cfg  setup.py  tox.ini  traffic.code-workspace
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation-request.md  feature-request.md
.github/workflows/: build-docs.yml  build_docs.yml  github-pages.yml  pypi-publish.yml  run-docker.yml  run-tests.yml
data/: 20171214_KL1300_(fd43298).csv  readme.md  sample_cesium.czml  sample_opensky.pkl
docker/: jupyter.Dockerfile  poetry.Dockerfile  readme.md  spark.Dockerfile  traffic.yml  uv.Dockerfile
docs/: .gitignore  Makefile  advanced.rst  airac_usage.rst  aircraft.rst  airports.rst  airways.rst  algorithms.rst  api_reference.rst  architecture.rst  b2b_usage.rst  cli.rst  clustering.rst  conf.py  core_structure.rst  cpa.rst  data.rst  data_basic.rst  docker.rst  eurofirs.rst  export.rst  firs.rst  gallery.rst  generation.rst  gui.rst  index.rst  installation.rst  is_this_a_plane.rst  kepler.rst  leaflet.rst  navaids.rst  navigation.rst  opensky_impala.rst  opensky_rest.rst  opensky_usage.rst  plugins.rst  publications.rst  quickstart.ipynb  quickstart.rst  requirements.txt  (+12 more)
docs-new/: mkdocs.yml  readme.md  zensical.yml
docs-new/docs/: getting-started.md  index.md  installation.md
docs-new/tools/: generate_publications.py
docs/_static/: arctic_circle.json  calibration.geojson  covid19_airlines.json  covid19_airports.json  landing_configuration.json  landing_sequence.json  main_stylesheet.css  sample_trajectories.geojson  squawk7700_depressurisation.json  sun_altitude.json  zero_gravity.json
docs/_templates/: layout.html
docs/api_reference/: traffic.algorithms.filters.rst  traffic.algorithms.ground.rst  traffic.algorithms.metadata.rst  traffic.algorithms.navigation.rst  traffic.algorithms.performance.rst  traffic.algorithms.prediction.rst  traffic.core.aero.rst  traffic.core.airspace.rst  traffic.core.cache.rst  traffic.core.distance.rst  traffic.core.flight.rst  traffic.core.flightplan.rst  traffic.core.geodesy.rst  traffic.core.intervals.rst  traffic.core.iterator.rst  traffic.core.lazy.rst  traffic.core.mixins.rst  traffic.core.structure.rst  traffic.core.sv.rst  traffic.core.time.rst  traffic.core.traffic.rst
docs/data_sources/: aircraft.rst  airports.rst  airspaces.rst  decode.rst  eurocontrol.rst  export.rst  flightplans.rst  navigation.rst  opensky_db.rst  opensky_impala.rst  opensky_rest.rst  samples.rst
docs/embed_widgets/: kepler.html  quickstart.html  squawk7700.html  sun_elevation.html  windfield.html
docs/gallery/: calibration.rst  covid19.rst  geomagnetic_declination.rst  heatmaps.rst  is_this_a_plane.rst  kaliningrad.rst  landing_configuration.rst  landing_sequence.rst  savan.rst  squawk7700.rst  sun_elevation.rst  tour_de_france.rst  windfield.rst  zero_gravity.rst
docs/navigation/: flight_phases.rst  flight_plan.rst  fuel_burn.rst  go_around.rst  holding_pattern.rst  occupancy.rst  point_merge.rst  top_of_climb.rst
docs/paper/: atc_detect.rst  runway_excursion.rst  sectflow.rst  squawk7700.rst
docs/scenarios/: calibration.rst  covid19.rst  covid19_airports.json  geomagnetic_declination.rst  heatmaps.rst  is_this_a_plane.rst  sun_elevation.rst  windfield.rst
docs/statistical/: clustering.rst
docs/troubleshooting/: data_access.rst  installation.rst  network.rst
docs/tutorial/: cpa.rst  flight_phases.rst  flight_plan.rst  fuel_burn.rst  generation.rst  go_around.rst  runway_changes.rst
docs/user_guide/: airports.rst  arithmetics.rst  bluesky.rst  cesium.rst  cli_tui.rst  docker.rst  export.rst  gui.rst  own_data.rst  plugins.rst  processing.rst  projection.rst  simplify.rst
docs/visualize/: leaflet.rst  plotly.rst  projection.rst
examples/: basic_usage.ipynb  clip_so6.py  kml_export.py  sectors.ipynb
icons/: travel.icns
joss/: paper.bib  paper.md
notebooks/: adsb_usage.ipynb  basic_usage.ipynb  douglas_peucker.ipynb  navdb_usage.ipynb  opensky_usage.ipynb  plot_sectors.ipynb  sectors_usage.ipynb  so6_usage.ipynb
opensky/: .gitignore  opensky_2019.ipynb  opensky_2020.ipynb
scripts/: .gitignore  airac_dl.py  airport_plot.py  airport_poster.py  chevelu.py  covid19_dataset.py  covid19_dataviz.py  dl_t2_2207.py  eurofirs_map.py  europe_airports.py  export_airports.py  export_json.py  export_worldfirs.py  extract_deviations.py  extract_deviations_2.py  format_data.py  frankfurt_flughafen.py  function_parsing_sector.py  make_app.py  make_noonground2.py  makeapp.py  modes_decode.py  opensky_coverage.py  opensky_data.py  opensky_messages.py  plot_eurofirs.py  plot_europe_firs.py  quickstart_dataset.py  so6_clip_sector.py  so6_compute_occupancy.py  so6_export_kml.py  so6_occupancy.py  so6_to_kml.py  spark_container_test.py  spark_eval.py  spark_traffic.py  stats_devs.py  stats_devs_month.py  stats_devs_month_copy.py  stats_devs_para.py
scripts/stats_devs_pack/: functions_heuristic.py  visu_stats.py
slides/: .gitignore  readme.md
src/traffic/: __init__.py  traffic.conf
tangram/: .gitignore  eslint.config.ts  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
tangram/tangram_landing/: package.json  pyproject.toml  vite.config.ts
tangram/tangram_landing/src/tangram_landing/: AircraftLanding.vue  __init__.py  index.ts
tests/: conftest.py  test_aircraft.py  test_airports.py  test_airspace.py  test_airways.py  test_b2b.py  test_clustering.py  test_cpa.py  test_datasets.py  test_decode.py  test_filter.py  test_flight.py  test_flightplan.py  test_generation.py  test_geodesy.py  test_impala.py  test_intervals.py  test_navaid.py  test_navigation.py  test_openap.py  test_opensky.py  test_persistence.py  test_so6.py  test_time.py  test_traffic.py  tests.env
tests/fr24/: 2ce4f83f.json  JL516_3376ab31.csv  (+1 more)
traffic/: __init__.py  __main__.py  console.py  kml.py  traffic.conf
(+312 files in other folders)
