[metadata]
license_file = license.md

[flake8]
max-line-length = 80
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # No need to check that if you work on notebooks in the directory
    .ipynb_checkpoints,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
ignore =
    # W503 line break before binary operator
    W503,
    # C901 too complex
    C901,
    # B010 setattr are often just necessary
    B010