[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tangram_landing"
version = "0.2.0"
dependencies = ["tangram_core>=0.2.0", "traffic"]
authors = [{ name = "Xavier Olive", email = "git@xoolive.org" }]

[project.entry-points."tangram_core.plugins"]
tangram_landing = "tangram_landing:plugin"

[tool.uv.sources]
tangram_core = { path = "../../../tangram/packages/tangram_core", editable = true }
traffic = { path = "../..", editable = true }

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["dist-frontend/*", "src/*"]

[tool.hatch.build.targets.wheel.force-include]
"dist-frontend" = "tangram_landing/dist-frontend"
